fix contact sections align

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1392,6 +1392,12 @@ section {
         font-size: 2.8rem;
         text-align: left;
       }
+      &--right {
+        text-align: right;
+      }
+      &--left {
+        text-align: left;
+      }
     }
   }
 
@@ -1406,7 +1412,10 @@ section {
     color: #B4B4B4;
 
     @media screen and (min-width: 890px) {
-      & {
+      &--right {
+        text-align: right;
+      }
+      &--left {
         text-align: left;
       }
     }
